# strongsort_node

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: strongsort_node_launch.py
strong_sort/: strong_sort.py
strongsort_node/: associations.py  associations_ros_driver.py  conf_kalman_filter.py  cosplace.py  disjoint_set_associations.py  kalman_filter_mot.py  mot_desc_graph_const.py  multi_agent_kalman_filter.py  neighbor_monitor.py  neighbors_manager.py  obj_description.py  track.py  track_ros_setup.py
